# codedrill-mock-interview

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  requirements.txt
backend/app/: config.py
backend/app/models/: chat.py  problem.py  scoring.py  session.py
backend/app/routers/: code_chat.py  execution.py  interview.py  problems.py  scoring.py  sessions.py
backend/app/sandbox/: policies.py  runner.py  wrapper_template.py
backend/app/services/: ai_service.py  executor.py  problem_service.py  scoring_service.py  session_service.py
backend/tests/: conftest.py  test_execution.py  test_health.py  test_problems.py  test_sessions.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json  tsconfig.json  vite.config.ts
frontend/e2e/: api-health.spec.ts  arena-features.spec.ts  arena.spec.ts  history.spec.ts  home.spec.ts  navigation.spec.ts  problems.spec.ts
frontend/scripts/: bundle-problems.mjs
frontend/src/: App.vue  main.ts  style.css
frontend/src/demo/: init.ts  (+2 more)
scripts/: generate_solutions.sh  pre-push.sh  start_backend.sh  start_frontend.sh  status_backend.sh  status_frontend.sh  stop_backend.sh  stop_frontend.sh  validate_solutions.py
(+98 files in other folders)
